wrap fix

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -12,7 +12,7 @@ div.wrap {
     margin: auto;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5) !important; /* Параметры тени */
     width: 1020px;
-    min-height: 1020px;
+    min-height: 100%;
     padding-bottom: 30px;
 }
 
